# fikri-ai

./: .gitignore  Dockerfile  app.py  pyproject.toml  readme.md  requirements.txt
fikri/Planet Surf/: Project Summary.md
fikri/Planet Surf/Marketing Platform/: Project Description.md
fikri/Planet Surf/OTB Suite/: Project Description.md
fikri/Planet Surf/Sales Panel/: Project Description.md
fikri/Reycom Document Solusi/: Project Summary.md
fikri/interview/: faq.md
fikri/me/: summary.txt
